06-httproute-pma.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phpmyadmin
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
  hostnames:
    - "pma.local"
  rules:
    - backendRefs:
        - name: phpmyadmin
          port: 80
